<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="20sp"
    android:layout_marginTop="30sp"
    android:layout_marginEnd="30sp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_marginBottom="30sp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/years_gis_label1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Year: " />

            <Spinner
                android:id="@+id/yearSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:imeOptions="actionNext"
                android:textSize="14sp" />

        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Marital Status:" />

            <RadioGroup
                android:id="@+id/rdGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:enabled="false"
                    android:text="@string/marital_status_option_1" />

                <RadioButton
                    android:id="@+id/couple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:checked="true"
                    android:text="@string/marital_status_option_2" />

                <RadioButton
                    android:id="@+id/couple_single_receive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/marital_status_option_3" />

                <RadioButton
                    android:id="@+id/couple_allowance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/marital_status_option_4" />

                <RadioButton
                    android:id="@+id/survivor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:enabled="false"
                    android:text="@string/marital_status_option_5" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/button_next"
                android:layout_marginTop="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                app:cornerRadius="4dp"
                app:strokeColor="@color/colorPrimary"
                android:text="@string/next"
                app:strokeWidth="2dp" />

        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>