<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20sp"
    android:layout_marginTop="30sp"
    android:layout_marginEnd="30sp"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="2021" />

            <TextView
                android:id="@+id/martialStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:text="Marital Status: " />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="20sp"
                android:background="#c0c0c0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <Spinner
                    android:id="@+id/yearsGis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:imeOptions="actionNext"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gis_years_delay" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <Spinner
                    android:id="@+id/yearsOas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:imeOptions="actionNext" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oas_years_delay" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_combined_revenue" />

                <EditText
                    android:id="@+id/revenue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:layout_marginStart="5sp"
                    android:selectAllOnFocus="true"
                    android:text=""
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_includes_employment_revenue"
                android:textAlignment="viewStart"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_for_you_and_your_spousal"
                android:textAlignment="viewStart"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@android:color/black"
                android:text="@string/results" />

        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>